[package]
name = "classic-mac-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
embedded-nal = "0.6.0"
http_io = { version = "0.2.18", default-features = false, path = "../../Source/github.com/wezm/http_io" }
panic-abort = "0.3.2"
#reqwless = { version = "0.5.0", default-features = false }

[profile.release]
codegen-units = 1
